--- a/UserVoiceSDK/AndroidManifest.xml
+++ b/UserVoiceSDK/AndroidManifest.xml
@@ -1,12 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.uservoice.uservoicesdk"
-    android:versionCode="1"
-    android:versionName="0.0.1" >
-
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.uservoice.uservoicesdk">
     <application/>
-
 </manifest>
