--- a/UserVoiceSDK/local.properties
+++ b/UserVoiceSDK/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 24 10:31:09 EDT 2014
-sdk.dir=/Applications/Android Studio.app/sdk
+#Mon Jul 07 17:32:47 BRT 2014
+sdk.dir=/home/marcio/android-studio/sdk
