--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 24 15:15:04 EDT 2014
-sdk.dir=/Applications/Android Studio.app/sdk
+#Mon Jul 07 17:39:07 BRT 2014
+sdk.dir=/home/marcio/android-studio/sdk
